# solventstack

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2024-08-20-194118_create_topfive/: down.sql  up.sql
src/: main.rs
src/models/: mod.rs  schema.rs  topfive.rs  user.rs
src/routes/: debug.rs  index.rs  mod.rs  user.rs
templates/: create_user.tera  index.tera  user.tera
