[package]
name = "solventstack"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
rocket_cors = { version = "0.6.0-alpha1", default-features = false }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
dotenv = "0.15"
